fix(docs): documentation layout issue
- Update documentation layout to align with design

--- a/docs/.vitepress/vitepress/styles/navbar.scss
+++ b/docs/.vitepress/vitepress/styles/navbar.scss
@@ -20,17 +20,20 @@
     padding: 0 32px;
   }
 
-  .container {
+  .header-container {
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
-    max-width: var(--vp-screen-max-width);
 
     .content {
       display: flex;
       justify-content: flex-end;
       align-items: center;
       flex-grow: 1;
+    }
+
+    @include respond-to('xxl') {
+      max-width: var(--vp-screen-max-width);
     }
   }
 
