--- a/docs/.vitepress/vitepress/styles/vars.scss
+++ b/docs/.vitepress/vitepress/styles/vars.scss
@@ -1,6 +1,6 @@
 // SCSS variables
 // breakpoints
-$breakpoint-xxl: 1440px !default;
+$breakpoint-xxl: 1680px !default;
 $breakpoint-xlg: 1280px !default;
 $breakpoint-lg: 960px !default;
 $breakpoint-md: 768px !default;
